# hyjinx

./: .gitignore  AUTHORS  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
hyjinx/: __init__.py  actors.hy  api.hy  api.py  beautifier.hy  beautify.hy  call_graph.hy  cli.hy  crypto.hy  datatypes.hy  debug.py  docs.hy  hjx_inspect.py  hyrc.hy  inspect.hy  inspect.py  lib.hy  llm.hy  macros.hy  mail.hy  mat.hy  replllm.hy  result.hy  screen.hy  source.hy  sources.hy  visual.hy  wire.hy  zmq_client.hy  zmq_server.hy
hyperspace/: __init__.py  datatypes.hy  lib.hy  macros.hy  screen.hy  source.hy  wire.hy  zmq_server.hy
tests/: test_actors.py  test_cli.py  test_debug.py  test_lib.py  test_macros.py  test_result.py
tests/native_tests/: actors.hy  api.hy  call_graph.hy  crypto.hy  lib.hy  macros.hy  result.hy
