[build-system]
requires = [
  "setuptools>=64"
]
build-backend = "setuptools.build_meta"

[project]
name = "hyjinx"
description = "A minimal Hy utility library, using mostly the standard libraries."
authors = [
    {name = "Ati Sharma", email = "ati+hyjinx@agalmic.ltd"},
]
dynamic = ["version", "readme"]
requires-python = ">=3.11"
keywords = ["hy", "hylang", "utilities", "zeromq", "llm", "openai"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Lisp",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
dependencies = [
    "hy==0.28.0",
    "hyrule==0.5.0",
    "cytoolz",
    "more-itertools",
    "pansi",
    "platformdirs",
    "pygments",
    "multimethod"
]

[project.optional-dependencies]
zmq = ["ecdsa", "pyzmq", "zstandard"]
llm = ["openai", "anthropic"]
dev = ["pytest", "ecdsa", "pyzmq", "zstandard", "openai", "anthropic"]

[project.urls]
Repository = "https://github.com/atisharma/hyjinx"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "hyjinx.__version__"}

[tool.setuptools.package-data]
"*" = ["*.hy"]

[project.scripts]
hy-beautify = "hyjinx:__cli_grind_files"
hylight = "hyjinx:__cli_hylight_files"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

