[build-system]
requires = [
  "setuptools>=64"
]
build-backend = "setuptools.build_meta"

[project]
name = "hyjinx"
description = "A minimal Hy utility library, using mostly the standard libraries."
authors = [
    {name = "Ati Sharma", email = "ati+hyjinx@agalmic.ltd"},
]
dynamic = ["version", "readme"]
requires-python = ">=3.12"
keywords = ["hy", "hylang", "utilities", "zeromq", "llm", "openai", "anthropic"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Lisp",
    "Programming Language :: Hy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]
dependencies = [
    "ansi-escapes",
    "beautifhy>=1.1.4",
    "colorist",
    "hy>=1.1.0",
    "hyrule",
    "json-repair",
    "more-itertools",
    "multimethod",
    "platformdirs",
    "python-magic",
    "toolz"
]

[project.optional-dependencies]
zmq = ["ecdsa", "pyzmq", "zstandard", "msgpack"]
llm = ["openai", "anthropic"]
dev = ["pytest", "ecdsa", "pyzmq", "zstandard", "msgpack", "openai", "anthropic"]

[project.urls]
Repository = "https://github.com/atisharma/hyjinx"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "hyjinx.__version__"}

[tool.setuptools.package-data]
"*" = ["*.hy"]

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

