[metadata]
name = hyjinx
version = attr: hyjinx.__version__
description = A minimal Hy utility library, using mostly the standard libraries.
url = https://github.com/atisharma/hyjinx
author = Ati Sharma
author_email = ati+hyjinx@agalmic.ltd
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hy, hylang, utilities, zeromq
license = MIT License
license_files = LICENSE

[options]
python_requires = >= 3.11
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.extras_require]
zmq =
    pyzmq
    zstandard

[options.packages.find]
where = 

[options.package_data]
* = *.hy
